# ogle

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: DEPLOY.md  DEVPOST-SUBMISSION.md  architecture.md  live-verification.md  task-2-ml-lineage.md  w2-scorer.md  w2c-walker.md  w3-writeback.md
docs/screenshots/: README.md  _crop.py
examples/: README.md
examples/alerts/: churn-orders-drift.md
examples/demo/: drifted-signatures.json  healthy-signatures.json
scripts/: filter-cloud-aspects.py  ingest-showcase-context.dhub.yaml  ingest-showcase-defs.dhub.yaml  ingest-showcase-oss.dhub.yaml  ingest-showcase.dhub.yaml  inject-ml-lineage.py
src/ogle/: __init__.py  __main__.py  cli.py  llm.py  narrative.py  pipeline.py  scorer.py  signature.py  store.py  walker.py  watch.py  writeback.py
tests/: test_cli.py  test_llm.py  test_metrics.py  test_narrative.py  test_pipeline.py  test_scorer.py  test_signature.py  test_smoke.py  test_store.py  test_walker.py  test_watch.py  test_writeback.py
