[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogle"
version = "0.1.0"
description = "ML lineage agent that stares at your DataHub graph and catches silent drift before it hits prod."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ben Duske" }]
keywords = ["datahub", "ml-lineage", "ml-observability", "ai-agent", "drift-detection"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # runtime stays lean; DataHub + LLM clients added in W1
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Live DataHub walk (ogle.walker.DataHubBackend, scripts/live-drift-check.py). The pure
# pipeline (signature/scorer/store/narrative/pipeline) works WITHOUT this — users can feed
# their own DatasetSignatures. Only install when driving a live DataHub GMS.
datahub = [
    "acryl-datahub>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/BenDuske/ogle"
Repository = "https://github.com/BenDuske/ogle"
Issues = "https://github.com/BenDuske/ogle/issues"

[project.scripts]
ogle = "ogle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
